--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "declaration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -17,10 +18,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react",
+    "outDir": "lib/esm",
   },
   "include": [
     "src"
-, "src/App.tsxsrc/index.tsx.tsx"  ]
+  ],
+  "exclude": [
+    "node_modules",
+    "lib",
+    "src/App.tsx",
+    "src/Playground.tsx"
+  ]
 }
