feat: adding type-check npm script
this will run just a simple typecheck to make sure typescript will even compile

* npm run type-check

--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "publish": "npm publish",
-    "start": "node scripts/start.js"
+    "start": "node scripts/start.js",
+    "type-check": "tsc -p ./tsconfig.json --noEmit"
   },
   "eslintConfig": {
     "extends": [
