--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,43 +172,43 @@ jobs:
   #   - name: Run Unit Tests
   #     run: npm run test
   # e2e:
-    name: e2e
-    runs-on: ubuntu-latest
-    needs: [test, lint, build]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Cache node modules
-        uses: actions/cache@v1
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: Cache Cypress
-        uses: actions/cache@v1
-        env:
-          cypress-cache-name: cache-cypress
-        with:
-          path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      # Install NPM dependencies, cache them correctly
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 14
+  #   name: e2e
+  #   runs-on: ubuntu-latest
+  #   needs: [test, lint, build]
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v1
+  #     - name: Cache node modules
+  #       uses: actions/cache@v1
+  #       env:
+  #         cache-name: cache-node-modules
+  #       with:
+  #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+  #         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-build-${{ env.cache-name }}-
+  #           ${{ runner.os }}-build-
+  #           ${{ runner.os }}-
+  #     - name: Cache Cypress
+  #       uses: actions/cache@v1
+  #       env:
+  #         cypress-cache-name: cache-cypress
+  #       with:
+  #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
+  #         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-build-${{ env.cache-name }}-
+  #           ${{ runner.os }}-build-
+  #           ${{ runner.os }}-
+  #     # Install NPM dependencies, cache them correctly
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 14
 
-      - name: Install Node.js dependencies
-        run: npm ci
+  #     - name: Install Node.js dependencies
+  #       run: npm ci
 
-      # and run all Cypress tests
-      - name: Cypress run
-        run: npm run test:e2e:ci
+  #     # and run all Cypress tests
+  #     - name: Cypress run
+  #       run: npm run test:e2e:ci
