feat: adding cache busting mech
Addied a simple versionn to the from of hte cache string, that Way a dev can force a cache bust
even if the package lock has not changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: ${{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #           ${{ runner.os }}-build-
@@ -39,7 +39,7 @@ jobs:
   #     - name: Set up Node.js
   #       uses: actions/setup-node@v1
   #       with:
-  #         node-version: 16
+  #         node-version: 1
 
   #     - name: Install Node.js dependencies
   #       run: npm ci
@@ -72,7 +72,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache #  cache files are stored in `~/.npm` on Linux/macOS
-  #         key: ${{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #           ${{ runner.os }}-build-
@@ -80,7 +80,7 @@ jobs:
   #     - name: Set up Node.js
   #       uses: actions/setup-node@v1
   #       with:
-  #         node-version: 16
+  #         node-version: 1
 
   #     - name: Install Node.js dependencies
   #       run: npm ci
@@ -113,7 +113,7 @@ jobs:
           cypress-cache-name: cache-cypress
         with:
           path: ~/.cache #  cache files are stored in `~/.npm` on Linux/macOS
-          key: ${{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
             ${{ runner.os }}-build-
@@ -156,7 +156,7 @@ jobs:
   #       cypress-cache-name: cache-cypress
   #     with:
   #       path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: ${{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #       key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #       restore-keys: |
   #         ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #         ${{ runner.os }}-build-
@@ -164,7 +164,7 @@ jobs:
   #   - name: Set up Node.js
   #     uses: actions/setup-node@v1
   #     with:
-  #       node-version: 16
+  #       node-version: 1
 
   #   - name: Install Node.js dependencies
   #     run: npm ci
@@ -204,7 +204,7 @@ jobs:
   #     - name: Set up Node.js
   #       uses: actions/setup-node@v1
   #       with:
-  #         node-version: 16
+  #         node-version: 1
 
   #     - name: Install Node.js dependencies
   #       run: npm ci
