--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
   #         cache-name: cache-node-modules
   #       with:
   #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.1-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cache-name }}-
   #           ${{ runner.os }}-build-
@@ -31,7 +31,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.1-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #           ${{ runner.os }}-build-
@@ -61,7 +61,7 @@ jobs:
   #         cache-name: cache-node-modules
   #       with:
   #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.1-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cache-name }}-
   #           ${{ runner.os }}-build-
@@ -72,7 +72,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache #  cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.1-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #           ${{ runner.os }}-build-
@@ -97,33 +97,29 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Cache node modules
+        id: node-cache
         uses: actions/cache@v3
         env:
           cache-name: cache-node-modules
         with:
           path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: $v1.0.0-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          key: $v1.0.1-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+
       - name: Cache Cypress
         uses: actions/cache@v3
         env:
           cypress-cache-name: cache-cypress
         with:
           path: ~/.cache #  cache files are stored in `~/.npm` on Linux/macOS
-          key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          key: $v1.0.1-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+
       - name: Set up Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 16
 
       - name: Install Node.js dependencies
+        if: steps.node-cache.outputs.cache-hit != 'true'
         run: npm ci
 
         # ES LINT
@@ -145,22 +141,16 @@ jobs:
   #       cache-name: cache-node-modules
   #     with:
   #       path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: $v1.0.0-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #       restore-keys: |
-  #         ${{ runner.os }}-build-${{ env.cache-name }}-
-  #         ${{ runner.os }}-build-
-  #         ${{ runner.os }}-
+  #       key: $v1.0.1-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #
   #   - name: Cache Cypress
   #     uses: actions/cache@v3
   #     env:
   #       cypress-cache-name: cache-cypress
   #     with:
   #       path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: $v1.0.0-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #       restore-keys: |
-  #         ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
-  #         ${{ runner.os }}-build-
-  #         ${{ runner.os }}-
+  #       key: $v1.0.1-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #
   #   - name: Set up Node.js
   #     uses: actions/setup-node@v1
   #     with:
@@ -184,22 +174,16 @@ jobs:
   #         cache-name: cache-node-modules
   #       with:
   #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-build-${{ env.cache-name }}-
-  #           ${{ runner.os }}-build-
-  #           ${{ runner.os }}-
+  #         key: $v1.0.1-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #
   #     - name: Cache Cypress
   #       uses: actions/cache@v3
   #       env:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.0-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-build-${{ env.cache-name }}-
-  #           ${{ runner.os }}-build-
-  #           ${{ runner.os }}-
+  #         key: $v1.0.1-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #
   #     # Install NPM dependencies, cache them correctly
   #     - name: Set up Node.js
   #       uses: actions/setup-node@v1
