--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
   #         cache-name: cache-node-modules
   #       with:
   #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.6-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cache-name }}-
   #           ${{ runner.os }}-build-
@@ -36,7 +36,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.5-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.6-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #           ${{ runner.os }}-build-
@@ -66,7 +66,7 @@ jobs:
   #         cache-name: cache-node-modules
   #       with:
   #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.6-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cache-name }}-
   #           ${{ runner.os }}-build-
@@ -77,7 +77,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache #  cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.5-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.6-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #         restore-keys: |
   #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
   #           ${{ runner.os }}-build-
@@ -102,22 +102,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Cache npm configs
-        id: npm-cache
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-npm
-        with:
-          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Cache node modules
         id: node-cache
         uses: actions/cache@v3
         env:
-          cache-name: cache-node-modules
+          cache-name: cache-nodes-modules
         with:
-          path: '**/node_modules' # npm cache files are stored in `~/.npm` on Linux/macOS
-          key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          # https://github.com/actions/cache/blob/main/examples.md#node---npm
+          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+          key: $v1.0.6-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Cache Cypress
         uses: actions/cache@v3
@@ -125,7 +117,7 @@ jobs:
           cypress-cache-name: cache-cypress
         with:
           path: ~/.cache #  cache files are stored in `~/.npm` on Linux/macOS
-          key: $v1.0.5-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          key: $v1.0.6-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v1
@@ -155,7 +147,7 @@ jobs:
   #       cache-name: cache-node-modules
   #     with:
   #       path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #       key: $v1.0.6-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #
   #   - name: Cache Cypress
   #     uses: actions/cache@v3
@@ -163,7 +155,7 @@ jobs:
   #       cypress-cache-name: cache-cypress
   #     with:
   #       path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: $v1.0.5-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #       key: $v1.0.6-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #
   #   - name: Set up Node.js
   #     uses: actions/setup-node@v1
@@ -188,7 +180,7 @@ jobs:
   #         cache-name: cache-node-modules
   #       with:
   #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.6-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #
   #     - name: Cache Cypress
   #       uses: actions/cache@v3
@@ -196,7 +188,7 @@ jobs:
   #         cypress-cache-name: cache-cypress
   #       with:
   #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.5-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+  #         key: $v1.0.6-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
   #
   #     # Install NPM dependencies, cache them correctly
   #     - name: Set up Node.js
