feat: adding a build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,47 +10,47 @@ on:
     branches-ignore:
       - main
 jobs:
-  # build:
-  #   name: Build
-  #   runs-on: ubuntu-latest
-  #   needs: [type-check]
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [type-check]
 
-  #   steps:
-  #     - name: Check out Git repository
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v2
 
-  #     - name: Cache node modules
-  #       uses: actions/cache@v3
-  #       env:
-  #         cache-name: cache-node-modules
-  #       with:
-  #         path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.7-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-build-${{ env.cache-name }}-
-  #           ${{ runner.os }}-build-
-  #           ${{ runner.os }}-
-  #     - name: Cache Cypress
-  #       uses: actions/cache@v3
-  #       env:
-  #         cypress-cache-name: cache-cypress
-  #       with:
-  #         path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #         key: $v1.0.7-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
-  #           ${{ runner.os }}-build-
-  #           ${{ runner.os }}-
-  #     - name: Set up Node.js
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: 1
+      - name: Cache node modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+          key: $v1.0.7-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Cache Cypress
+        uses: actions/cache@v3
+        env:
+          cypress-cache-name: cache-cypress
+        with:
+          path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
+          key: $v1.0.7-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cypress-cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
 
-  #     - name: Install Node.js dependencies
-  #       run: npm ci
+      - name: Install Node.js dependencies
+        run: npm ci
 
-  #     - name: Build App
-  #       run: npm run build
+      - name: Build App
+        run: npm run build
 
   # lint:
   #   name: Lint
