chore: adding build docs
adding some new build docs

--- a/.github/config/pr-labeler.yml
+++ b/.github/config/pr-labeler.yml
@@ -1,4 +1,4 @@
 feature: ['feature/*', 'feat/*']
 fix: ['fix/*', 'hotfix/*']
-chore: ['chore/*', 'refactor/*'
+chore: ['chore/*', 'refactor/*', build/*]
 docs: ['docs/*', 'documentation/*' ]
