--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,41 +99,34 @@ jobs:
       - name: Run Typescrit Compiler
         run: npm run type-check
 
-  # test:
-  #   name: Unit Tests
-  #   runs-on: ubuntu-latest
-  #   needs: [type-check]
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    needs: [type-check]
 
-  #   steps:
-  #   - name: Check out Git repository
-  #     uses: actions/checkout@v2
+    steps:
+    - name: Check out Git repository
+      uses: actions/checkout@v2
 
-  #   - name: Cache node modules
-  #     uses: actions/cache@v3
-  #     env:
-  #       cache-name: cache-node-modules
-  #     with:
-  #       path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: $v1.0.7-{{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #
-  #   - name: Cache Cypress
-  #     uses: actions/cache@v3
-  #     env:
-  #       cypress-cache-name: cache-cypress
-  #     with:
-  #       path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
-  #       key: $v1.0.7-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
-  #
-  #   - name: Set up Node.js
-  #     uses: actions/setup-node@v1
-  #     with:
-  #       node-version: 16
+    - name: Cache Cypress
+      uses: actions/cache@v3
+      env:
+        cypress-cache-name: cache-cypress
+      with:
+        path: ~/.cache # npm cache files are stored in `~/.npm` on Linux/macOS
+        key: $v1.0.7-{{ runner.os }}-build-${{ env.cypress-cache-name }}-${{ hashFiles('**/package-lock.json') }}
 
-  #   - name: Install Node.js dependencies
-  #     run: npm ci
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version-file: '.nvmrc'
+        cache: 'npm'
 
-  #   - name: Run Unit Tests
-  #     run: npm run test
+    - name: Install Node.js dependencies
+      run: npm ci
+
+    - name: Run Unit Tests
+      run: npm run test:ci
   # e2e:
   #   name: e2e
   #   runs-on: ubuntu-latest
