--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "seafarer",
   "version": "1.3.2",
-  "private": true,
+  "private": false,
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "files": [
     "src"
   ],
+  "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
