--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GH_PAT }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
