--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seafarer",
   "version": "1.3.4",
-  "private": false,
+  "private": true,
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
