fix: bad publish yml

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: https://npm.pkg.github.com/
-        name: Publish - NPM
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GH_PAT }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish
+      name: Publish - Github
+      env:
+        GITHUB_TOKEN: ${{ secrets.MY_GH_PAT }}
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      run: npm publish
