--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GH_PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npm set private=false
         run: npm publish --access public
       - name: Set up Node.js
         uses: actions/setup-node@v3
