--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   publish-npm:
-    name: Publish Package
+    name: NPM
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -30,7 +30,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm publish --access public
   publish-github:
-    name: Publish Github Package
+    name: Github
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -47,7 +47,7 @@ jobs:
       - name: Install dependencies
         run: HUSKY_SKIP_INSTALL=1 npm ci --ignore-scripts
       - name: Set package to False
-        run: npx json -I -f package.json -e 'this.private=false' && npx json -I -f package.json -e 'this.name=@ptallen63/seafarer'
+        run: npx json -I -f package.json -e 'this.private=false' && npx json -I -f package.json -e 'this.name="@ptallen63/seafarer"'
       - name: Set the registry
         run: npm config set registry https://npm.pkg.github.com/
       - name: Github package registry authentication
