--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,3 +10,7 @@ jobs:
     uses: ./.github/workflows/ci.yml
   release:
     uses: ./.github/workflows/create-release.yml
+    secrets:
+      npm-token: ${{ secrets.NPM_TOKEN }}
+      gh-token: ${{ secrets.MY_GH_PAT }}
+    needs: [ci]
