--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,15 @@ jobs:
       - name: Build App
         run: npm run build
 
+      - name: Upload build
+        if: inputs.environment == 'production'
+        uses: actions/upload-artifact@v3
+          with:
+            name: lib
+            path: |
+              lib
+              !lib/**/*.md
+
   lint:
     name: Lint
     runs-on: ubuntu-latest
