--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   ci:
     uses: ./.github/workflows/ci.yml
+    with:
+      environment: 'production'
   release:
     uses: ./.github/workflows/create-release.yml
     secrets:
