--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
   "files": [
-    "src"
+    "src",
+    "lib"
   ],
   "license": "MIT",
   "dependencies": {
