--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "seafarer",
   "version": "1.3.22",
   "private": true,
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
-  "types": "./lib/esm/index.d.ts",
+  "main": "./lib/cjs/src/index.js",
+  "module": "./lib/esm/src/index.js",
+  "types": "./lib/esm/src/index.d.ts",
   "files": [
     "src",
     "lib"
