--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seafarer",
+  "name": "@ptallen63/seafarer",
   "version": "1.3.24",
   "private": true,
   "main": "./lib/cjs/src/index.js",
