--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "./lib/cjs/src/index.js",
   "module": "./lib/esm/src/index.js",
-  "types": "./lib/esm/src/index.d.ts",
+  "types": "./lib/cjs/src/index.d.ts",
   "files": [
     "src",
     "lib"
@@ -67,10 +67,10 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs && npm run build:amd",
+    "build": "npm run build:esm && npm run build:cjs && npm run build:single",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
-    "build:amd": "tsc --module amd --outDir lib --outFile lib/index.js --isolatedModules false",
+    "build:single": "tsc --module commonjs --outDir lib",
     "start": "node scripts/start.js",
     "test": "node scripts/test.js",
     "test:ci": "CI=true node scripts/test.js --passWithNoTests",
