--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@ptallen63/seafarer",
   "version": "1.3.29",
   "private": true,
-  "main": "./lib/cjs/src/index.js",
+  "main": "./lib/index.js",
   "module": "./lib/esm/src/index.js",
-  "types": "./lib/cjs/src/index.d.ts",
+  "types": "./lib/index.d.ts",
   "files": [
     "src",
     "lib"
