--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ptallen63/seafarer",
   "version": "1.3.29",
+  "description": "A simple way to create multi step flows",
   "private": true,
   "main": "./lib/index.js",
   "module": "./lib/esm/src/index.js",
