--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.3.30",
   "description": "A simple way to create multi step flows",
   "private": true,
-  "main": "./lib/index.js",
+  "main": "./lib/cjs/index.js",
   "module": "./lib/esm/src/index.js",
-  "types": "./lib/index.d.ts",
+  "types": "./lib/csj/index.d.ts",
   "files": [
     "src",
-    "lib"
+    "lib",
+    "lib/index.js"
   ],
   "license": "MIT",
   "dependencies": {
