fix: husky postinstall was a bad idea

--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "test:ci": "CI=true node scripts/test.js --passWithNoTests",
     "type-check": "tsc -p ./tsconfig.json --noEmit",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "postinstall": "npx husky install"
+    "lint:fix": "eslint src --fix"
   },
   "browserslist": {
     "production": [
