--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ptallen63/seafarer",
   "version": "1.5.0",
+  "author": "Paul Allen",
   "description": "A simple way to create multi step flows",
   "private": true,
   "main": "lib/cjs/src/index.js",
