--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,16 +17,20 @@ on:
         required: false
         type: string
 jobs:
+  setup:
+    name: Housekeeping
+    run-on: ubuntu-latest
+    steps:
+      - name: 🛑 Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
   build:
     name: Build
     runs-on: ubuntu-latest
     needs: [type-check]
 
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.9.1
-        with:
-          access_token: ${{ github.token }}
       - name: Check out Git repository
         uses: actions/checkout@v2
 
@@ -94,6 +98,7 @@ jobs:
   type-check:
     name: Type Checking
     runs-on: ubuntu-latest
+    needs: [type-check]
 
     steps:
       - name: Check out Git repository
